--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon dice</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="simon.css">
     
 </head> 
 <body>
     <div class="container" id="titulo-juego">
         <div class="row">
-          <div class="col-4">
-            Turno de: <strong id="jugador"></strong>
+
+          <div class="col-2 alert alert-secondary h4" role="alert">
+            Simon dice:
           </div>
-          <div class="col-6" id="rondas">
+          <strong class="col-4 titulo alert alert-secondary h5" role="alert" id="titulo" >
+          </strong>
+          <div class="col-3 alert alert-secondary h5" role="alert" id="rondas">
           </div>
-          <div class="col">
+          <div class="col-1">
             <button type="button" class="btn btn-dark" id="boton-jugar">Jugar!</button>
           </div>
         </div>
@@ -28,18 +31,18 @@
             <div class="row">
               <div class="col-sm-2">
               </div>
-              <div class="col-sm-4 amarillo cuadro" id="primer-cuadro">
+              <div class="col-sm-3 amarillo cuadro" id="primer-cuadro">
               </div>
-              <div class="col-sm-4 azul cuadro" id="segund-cuadro">
+              <div class="col-sm-3 azul cuadro" id="segund-cuadro">
               </div>
             </div> 
 
             <div class="row">
               <div class="col-sm-2">
               </div>
-                <div class="col-sm-4 rojo cuadro" id="tercer-cuadro">
+                <div class="col-sm-3 rojo cuadro" id="tercer-cuadro">
                 </div>
-                <div class="col-sm-4 verde cuadro" id="cuarto-cuadro">
+                <div class="col-sm-3 verde cuadro" id="cuarto-cuadro">
                 </div>
               </div>
           </div>
